<resources>
    <string name="app_name">EatUp</string>
    <string name="mobile_number">Mobile Number (10 digits)</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register_yourself">Don\'t have an account? Sign Up</string>
    <string name="name_min_3_characters">Name (Min. 3 Characters)</string>
    <string name="email_address">Email Address</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="password_min_4_characters">Password (Min. 4 Characters)</string>
    <string name="sign_up">Sign Up</string>
    <string name="navigation_drawer">Navigation Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_sort">Sort</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="enter_your_registered_mobile_number_and_email_address_below">Enter your registered Mobile Number and Email Address below:</string>
    <string name="next">Next</string>
    <string name="enter_the_otp_received">"Enter the OTP received"</string>
    <string name="otp_4_characters">OTP (4 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="user_name">User Name</string>
    <string name="no">No.</string>
    <string name="rs_100">Rs. 100</string>
    <string name="add">Add</string>
    <string name="proceed_to_cart">Proceed to Cart</string>
    <string name="place_order_total_rs">Place Order (Total Rs.###)</string>
    <string name="dish_name">Dish Name</string>
    <string name="rs_199">Rs. 199</string>
    <string name="ordering_from_restaurant_name">Ordering From: Restaurant Name</string>
    <string name="ok">Ok</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders are listed below:</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="you_do_not_have_any_favourite_restaurants_right_now">You do not have any favourite restaurants right now</string>
    <string name="q_2_what_will_be_the_timings_of_the_training">Q.2. What will be the timings of the training?</string>
    <string name="a_2_as_this_is_a_purely_online_training_program_you_can_choose_to_learn_at_any_time_of_the_day_we_will_recommend_a_pace_to_be_followed_throughout_the_program">A.2. As this is a purely online training program, you can choose to learn at any time of the day. We will recommend a pace to be followed throughout the program.</string>
    <string name="q_3_what_is_the_duration_of_training">Q.3. What is the duration of training?</string>
    <string name="a_3_the_training_duration_is_of_6_weeks">A.3. The training duration is of 6 weeks.</string>
    <string name="q_5_how_much_time_should_i_spend_everyday">Q.5. How much time should I spend everyday?</string>
    <string name="a_5_we_recommend_spending_10_12_hours_per_week_however_the_actual_learning_hours_can_be_decided_by_you_as_per_your_convenience">A.5. We recommend spending 10-12 hours per week. However, the actual learning hours can be decided by you as per your convenience.</string>
    <string name="rs_total_cost">Rs. Total Cost</string>
    <string name="q_6_how_will_the_training_be_delivered">Q.6. How will the training be delivered?</string>
    <string name="a_6_you_will_be_taught_using_pre_recorded_videos_and_text_tutorials_you_will_be_asked_to_submit_assignments_on_a_regular_basis">A.6. You will be taught using pre recorded videos and text tutorials. You will be asked to submit assignments on a regular basis</string>
    <string name="new_password_min_4_characters">New Password (Min. 4 characters)</string>
</resources>
