<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.LoginActivity">

    <ImageView
        android:id="@+id/imgLoginLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_restaurant_menu_black_350dp" />

    <EditText
        android:background="@null"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:id="@+id/etMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLoginLogo"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:padding="6dp" />

    <EditText
        android:background="@null"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMobileNumber"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:padding="6dp"
        android:text="@string/forgot_password"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:padding="6dp"
        android:text="@string/register_yourself"
        android:textSize="16sp" />


</RelativeLayout>