<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cvResMenu"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:layout_alignParentLeft="true"
            android:id="@+id/txtResMenuSrl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textAlignment="center"
            android:textColor="#000"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_toRightOf="@+id/txtResMenuSrl"
            android:layout_toLeftOf="@+id/btnResMenuAdd"
            android:id="@+id/llInnerResMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="5dp"
            android:orientation="vertical"
            android:padding="6dp"
            android:textSize="18sp">

            <TextView
                android:id="@+id/txtResMenuName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="3dp"
                android:text="@string/dish_name"
                android:textColor="#000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtResMenuPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:padding="3dp"
                android:text="@string/rs_100"
                android:textSize="18sp" />


        </LinearLayout>


        <Button
            android:layout_alignParentEnd="true"
            android:id="@+id/btnResMenuAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="5dp"
            android:background="#000"
            android:padding="6dp"
            android:text="@string/add"
            android:textColor="#fff"
            android:textSize="18sp" />
    </RelativeLayout>


</androidx.cardview.widget.CardView>