<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arpit.eatup.activity.ResetPasswordActivity">

    <ImageView
        android:id="@+id/imgReset"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_restaurant_menu_black_350dp" />

    <TextView
        android:id="@+id/txtInstructionReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgReset"
        android:layout_centerHorizontal="true"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:lines="1"
        android:padding="6dp"
        android:text="@string/enter_the_otp_received"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText

        android:id="@+id/etResetOtp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInstructionReset"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_screen_lock_portrait_black_24dp"
        android:hint="@string/otp_4_characters"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etResetPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etResetOtp"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/new_password_min_4_characters"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:id="@+id/etResetPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etResetPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnResetSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etResetPasswordConfirm"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/submit"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/progressLayoutReset"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarReset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

</RelativeLayout>
