<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity">

    <ImageView
        android:id="@+id/imgRegisterLogo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_restaurant_menu_black_350dp" />

    <EditText
        android:drawableStart="@drawable/ic_person_black_24dp"
        android:background="@null"
        android:id="@+id/etRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgRegisterLogo"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/name_min_3_characters"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:background="@null"
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegName"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:background="@null"
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:id="@+id/etRegMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegEmail"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:drawableStart="@drawable/ic_location_on_black_24dp"
        android:background="@null"
        android:id="@+id/etRegDeliveryAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegMobileNumber"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/delivery_address"
        android:maxLines="2"
        android:padding="6dp" />

    <EditText
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:background="@null"
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegDeliveryAddress"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/password_min_4_characters"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:drawableStart="@drawable/ic_lock_black_24dp"
        android:background="@null"
        android:id="@+id/etRegConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegConfirmPassword"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/progressLayoutReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>