<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arpit.eatup.activity.ForgotPasswordActivity">

    <ImageView
        android:id="@+id/imgForgot"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/ic_restaurant_menu_black_350dp" />


    <TextView
        android:id="@+id/txtInstructionForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgForgot"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:lines="2"
        android:padding="6dp"
        android:text="@string/enter_your_registered_mobile_number_and_email_address_below"
        android:textColor="#000000"
        android:textSize="18sp" />

    <EditText
        android:drawableStart="@drawable/ic_phone_android_black_24dp"
        android:background="@null"
        android:id="@+id/etForgotMobileNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtInstructionForgot"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/mobile_number"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="6dp" />

    <EditText
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:background="@null"
        android:id="@+id/etForgotEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgotMobileNumber"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:hint="@string/email_address"
        android:inputType="textWebEmailAddress"
        android:maxLines="1"
        android:padding="6dp" />

    <Button
        android:id="@+id/btnForgotNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etForgotEmail"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimaryDark"
        android:padding="6dp"
        android:text="@string/next"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/progressLayoutPass"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBarPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>


</RelativeLayout>