<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.arpit.eatup.fragment.ProfileFragment"
    android:background="#D3D3D3">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvProfileFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:elevation="5dp">

        <RelativeLayout
            android:id="@+id/rlProfileContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgProfile"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:padding="5dp"
                android:src="@drawable/ic_person_black_24dp" />

            <TextView
                android:id="@+id/txtProfileName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgProfile"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:elevation="2dp"
                android:text="@string/user_name"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtProfileMobileNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProfileName"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:elevation="2dp"
                android:text="@string/mobile_number"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtProfileEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txtProfileMobileNumber"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:elevation="2dp"
                android:text="@string/email_address"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtProfileAddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtProfileEmail"
                android:layout_centerHorizontal="true"
                android:layout_margin="10dp"
                android:elevation="2dp"
                android:maxLines="2"
                android:text="@string/delivery_address"
                android:textColor="#000"
                android:textSize="18sp"
                android:textStyle="bold" />


        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</FrameLayout>
